--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -7,37 +7,37 @@
 		<meta name="format-detection" content="telephone=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<!-- Fonts-->
-		<link rel="stylesheet" type="text/css" href="assets/fonts/fontawesome/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="assets/fonts/pe-icon/pe-icon.css">
+		<link rel="stylesheet" type="text/css" href="/fonts/fontawesome/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="/fonts/pe-icon/pe-icon.css">
 		<!-- Vendors-->
-		<link rel="stylesheet" type="text/css" href="assets/vendors/bootstrap/grid.css">
-		<link rel="stylesheet" type="text/css" href="assets/vendors/magnific-popup/magnific-popup.min.css">
-		<link rel="stylesheet" type="text/css" href="assets/vendors/swiper/swiper.css">
+		<link rel="stylesheet" type="text/css" href="/vendors/bootstrap/grid.css">
+		<link rel="stylesheet" type="text/css" href="/vendors/magnific-popup/magnific-popup.min.css">
+		<link rel="stylesheet" type="text/css" href="/vendors/swiper/swiper.css">
 		<!-- App & fonts-->
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:400,700">
-		<link rel="stylesheet" type="text/css" id="app-stylesheet" href="assets/css/main.css"><!--[if lt IE 9]>
+		<link rel="stylesheet" type="text/css" id="app-stylesheet" href="/css/main.css"><!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<![endif]-->
 	</head>
-	
+
 	<body>
 		<div class="page-wrap" id="root">
-			
+
 			<!-- header -->
 			<header class="header header--fixed">
 				<div class="header__inner">
-					<div class="header__logo"><a href="index.html"><img src="assets/img/logo.png" alt="" style="width: 122px;"/></a></div>
+					<div class="header__logo"><a href="index.html"><img src="/img/logo.png" alt="" style="width: 122px;"/></a></div>
 					<div class="navbar-toggle" id="fs-button">
 						<div class="navbar-icon"><span></span></div>
 					</div>
 				</div>
-				
+
 				<!-- fullscreenmenu__module -->
 				<div class="fullscreenmenu__module" trigger="#fs-button">
-					
+
 					<!-- overlay-menu -->
 					<nav class="overlay-menu">
-						
+
 						<!--  -->
 						<ul class="wil-menu-list">
 							<li><a href="index.html">Home</a>
@@ -51,32 +51,32 @@
 							<li><a href="contact.html">Contact</a>
 							</li>
 						</ul><!--  -->
-						
+
 					</nav><!-- End / overlay-menu -->
-					
+
 				</div><!-- End / fullscreenmenu__module -->
-				
+
 			</header><!-- End / header -->
-			
+
 			<!-- Content-->
 			<div class="wil-content">
-				
+
 				<!-- Section -->
 				<section class="awe-section">
 					<div class="container">
-						
+
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">I write</h2>
 							<p class="page-title__text">Sed ante nisl, fermentum et facilisis in</p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
-						
+
 					</div>
 				</section>
 				<!-- End / Section -->
-				
-				
+
+
 				<!-- Section -->
 				<section class="awe-section bg-gray">
 					<div class="container">
@@ -86,7 +86,7 @@
 								<div class="grid-item">
 									<div class="grid-item__inner">
 										<div class="grid-item__content-wrapper">
-											
+
 											<!-- post -->
 											<div class="post">
 												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/807034/pexels-photo-807034.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
@@ -98,14 +98,14 @@
 													</a>
 												</div>
 											</div><!-- End / post -->
-											
+
 										</div>
 									</div>
 								</div>
 								<div class="grid-item">
 									<div class="grid-item__inner">
 										<div class="grid-item__content-wrapper">
-											
+
 											<!-- post -->
 											<div class="post">
 												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/609687/pexels-photo-609687.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
@@ -117,14 +117,14 @@
 													</a>
 												</div>
 											</div><!-- End / post -->
-											
+
 										</div>
 									</div>
 								</div>
 								<div class="grid-item">
 									<div class="grid-item__inner">
 										<div class="grid-item__content-wrapper">
-											
+
 											<!-- post -->
 											<div class="post">
 												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/754949/pexels-photo-754949.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
@@ -136,14 +136,14 @@
 													</a>
 												</div>
 											</div><!-- End / post -->
-											
+
 										</div>
 									</div>
 								</div>
 								<div class="grid-item">
 									<div class="grid-item__inner">
 										<div class="grid-item__content-wrapper">
-											
+
 											<!-- post -->
 											<div class="post">
 												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/794578/pexels-photo-794578.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
@@ -155,14 +155,14 @@
 													</a>
 												</div>
 											</div><!-- End / post -->
-											
+
 										</div>
 									</div>
 								</div>
 								<div class="grid-item">
 									<div class="grid-item__inner">
 										<div class="grid-item__content-wrapper">
-											
+
 											<!-- post -->
 											<div class="post">
 												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/38069/pexels-photo-38069.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
@@ -174,14 +174,14 @@
 													</a>
 												</div>
 											</div><!-- End / post -->
-											
+
 										</div>
 									</div>
 								</div>
 								<div class="grid-item">
 									<div class="grid-item__inner">
 										<div class="grid-item__content-wrapper">
-											
+
 											<!-- post -->
 											<div class="post">
 												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/290386/pexels-photo-290386.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
@@ -193,14 +193,14 @@
 													</a>
 												</div>
 											</div><!-- End / post -->
-											
+
 										</div>
 									</div>
 								</div>
 								<div class="grid-item">
 									<div class="grid-item__inner">
 										<div class="grid-item__content-wrapper">
-											
+
 											<!-- post -->
 											<div class="post">
 												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/792906/pexels-photo-792906.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
@@ -212,14 +212,14 @@
 													</a>
 												</div>
 											</div><!-- End / post -->
-											
+
 										</div>
 									</div>
 								</div>
 								<div class="grid-item">
 									<div class="grid-item__inner">
 										<div class="grid-item__content-wrapper">
-											
+
 											<!-- post -->
 											<div class="post">
 												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/789140/pexels-photo-789140.jpeg?h=350&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
@@ -231,7 +231,7 @@
 													</a>
 												</div>
 											</div><!-- End / post -->
-											
+
 										</div>
 									</div>
 								</div>
@@ -244,10 +244,10 @@
 					</div>
 				</section>
 				<!-- End / Section -->
-				
+
 			</div>
 			<!-- End / Content-->
-			
+
 			<!-- footer -->
 			<div class="footer">
 				<div class="container">
@@ -257,52 +257,52 @@
 						</div>
 						<div class="col-md-6 col-lg-6 ">
 							<div class="footer__social">
-								
+
 								<!-- social-icon -->
 								<a class="social-icon" href="#"><i class="social-icon__icon fa fa-facebook"></i>
 								</a><!-- End / social-icon -->
-								
-								
+
+
 								<!-- social-icon -->
 								<a class="social-icon" href="#"><i class="social-icon__icon fa fa-twitter"></i>
 								</a><!-- End / social-icon -->
-								
-								
+
+
 								<!-- social-icon -->
 								<a class="social-icon" href="#"><i class="social-icon__icon fa fa-linkedin"></i>
 								</a><!-- End / social-icon -->
-								
-								
+
+
 								<!-- social-icon -->
 								<a class="social-icon" href="#"><i class="social-icon__icon fa fa-behance"></i>
 								</a><!-- End / social-icon -->
-								
-								
+
+
 								<!-- social-icon -->
 								<a class="social-icon" href="#"><i class="social-icon__icon fa fa-vimeo"></i>
 								</a><!-- End / social-icon -->
-								
+
 							</div>
 						</div>
 					</div>
 				</div>
 			</div><!-- End / footer -->
-			
+
 		</div>
 		<!-- Vendors-->
-		<script type="text/javascript" src="assets/vendors/jquery/jquery.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/imagesloaded/imagesloaded.pkgd.js"></script>
-		<script type="text/javascript" src="assets/vendors/isotope-layout/isotope.pkgd.js"></script>
-		<script type="text/javascript" src="assets/vendors/jquery-one-page/jquery.nav.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/jquery.easing/jquery.easing.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/jquery.matchHeight/jquery.matchHeight.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/masonry-layout/masonry.pkgd.js"></script>
-		<script type="text/javascript" src="assets/vendors/jquery.waypoints/jquery.waypoints.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/swiper/swiper.jquery.js"></script>
-		<script type="text/javascript" src="assets/vendors/menu/menu.js"></script>
-		<script type="text/javascript" src="assets/vendors/typed/typed.min.js"></script>
+		<script type="text/javascript" src="/vendors/jquery/jquery.min.js"></script>
+		<script type="text/javascript" src="/vendors/imagesloaded/imagesloaded.pkgd.js"></script>
+		<script type="text/javascript" src="/vendors/isotope-layout/isotope.pkgd.js"></script>
+		<script type="text/javascript" src="/vendors/jquery-one-page/jquery.nav.min.js"></script>
+		<script type="text/javascript" src="/vendors/jquery.easing/jquery.easing.min.js"></script>
+		<script type="text/javascript" src="/vendors/jquery.matchHeight/jquery.matchHeight.min.js"></script>
+		<script type="text/javascript" src="/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
+		<script type="text/javascript" src="/vendors/masonry-layout/masonry.pkgd.js"></script>
+		<script type="text/javascript" src="/vendors/jquery.waypoints/jquery.waypoints.min.js"></script>
+		<script type="text/javascript" src="/vendors/swiper/swiper.jquery.js"></script>
+		<script type="text/javascript" src="/vendors/menu/menu.js"></script>
+		<script type="text/javascript" src="/vendors/typed/typed.min.js"></script>
 		<!-- App-->
-		<script type="text/javascript" src="assets/js/main.js"></script>
+		<script type="text/javascript" src="/js/main.js"></script>
 	</body>
 </html>
