--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -2,61 +2,14 @@
 <html>
 	<head>
 		<title>Blog</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<meta name="format-detection" content="telephone=no">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<!-- Fonts-->
-		<link rel="stylesheet" type="text/css" href="/fonts/fontawesome/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="/fonts/pe-icon/pe-icon.css">
-		<!-- Vendors-->
-		<link rel="stylesheet" type="text/css" href="/vendors/bootstrap/grid.css">
-		<link rel="stylesheet" type="text/css" href="/vendors/magnific-popup/magnific-popup.min.css">
-		<link rel="stylesheet" type="text/css" href="/vendors/swiper/swiper.css">
-		<!-- App & fonts-->
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:400,700">
-		<link rel="stylesheet" type="text/css" id="app-stylesheet" href="/css/main.css"><!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		<![endif]-->
+		<% include partials/title %>
 	</head>
 
 	<body>
 		<div class="page-wrap" id="root">
 
-			<!-- header -->
-			<header class="header header--fixed">
-				<div class="header__inner">
-					<div class="header__logo"><a href="index.html"><img src="/img/logo.png" alt="" style="width: 122px;"/></a></div>
-					<div class="navbar-toggle" id="fs-button">
-						<div class="navbar-icon"><span></span></div>
-					</div>
-				</div>
+		<% include partials/header %>
 
-				<!-- fullscreenmenu__module -->
-				<div class="fullscreenmenu__module" trigger="#fs-button">
-
-					<!-- overlay-menu -->
-					<nav class="overlay-menu">
-
-						<!--  -->
-						<ul class="wil-menu-list">
-							<li><a href="index.html">Home</a>
-							</li>
-							<li><a href="about.html">About</a>
-							</li>
-							<li><a href="work.html">Work</a>
-							</li>
-							<li class="current-menu-item"><a href="blog.html">Blog</a>
-							</li>
-							<li><a href="contact.html">Contact</a>
-							</li>
-						</ul><!--  -->
-
-					</nav><!-- End / overlay-menu -->
-
-				</div><!-- End / fullscreenmenu__module -->
-
-			</header><!-- End / header -->
 
 			<!-- Content-->
 			<div class="wil-content">
@@ -248,45 +201,8 @@
 			</div>
 			<!-- End / Content-->
 
-			<!-- footer -->
-			<div class="footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6 col-lg-6 ">
-							<p class="footer__coppy">2018 &copy; Copyright <a href="http://awe7.com/">Awe7</a>. All rights Reserved.</p>
-						</div>
-						<div class="col-md-6 col-lg-6 ">
-							<div class="footer__social">
+		<% include partials/footer %>
 
-								<!-- social-icon -->
-								<a class="social-icon" href="#"><i class="social-icon__icon fa fa-facebook"></i>
-								</a><!-- End / social-icon -->
-
-
-								<!-- social-icon -->
-								<a class="social-icon" href="#"><i class="social-icon__icon fa fa-twitter"></i>
-								</a><!-- End / social-icon -->
-
-
-								<!-- social-icon -->
-								<a class="social-icon" href="#"><i class="social-icon__icon fa fa-linkedin"></i>
-								</a><!-- End / social-icon -->
-
-
-								<!-- social-icon -->
-								<a class="social-icon" href="#"><i class="social-icon__icon fa fa-behance"></i>
-								</a><!-- End / social-icon -->
-
-
-								<!-- social-icon -->
-								<a class="social-icon" href="#"><i class="social-icon__icon fa fa-vimeo"></i>
-								</a><!-- End / social-icon -->
-
-							</div>
-						</div>
-					</div>
-				</div>
-			</div><!-- End / footer -->
 
 		</div>
 		<!-- Vendors-->
