--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -42,10 +42,10 @@
 
 											<!-- post -->
 											<div class="post">
-												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/807034/pexels-photo-807034.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
+												<div class="post__media"><a href="blogDetail"><img src="https://images.pexels.com/photos/807034/pexels-photo-807034.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
 												<div class="post__body">
 													<div class="post__meta"><span class="date">Nov 26, 2017</span><span class="author"><a href="#">by Maria Gutierrez</a></span></div>
-													<h2 class="post__title"><a href="blog-detail.html">Is UX Really That Important?</a></h2>
+													<h2 class="post__title"><a href="blogDetail">Is UX Really That Important?</a></h2>
 													<p class="post__text">Duis porttitor libero ac egestas euismod. Maecenas quis felis turpis. Nulla quis turpis sed augue egestas dapibus vel at nibh. Nul</p>
 													<a class="md-btn md-btn--outline-primary" href="#">read more
 													</a>
@@ -61,10 +61,10 @@
 
 											<!-- post -->
 											<div class="post">
-												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/609687/pexels-photo-609687.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
+												<div class="post__media"><a href="blogDetail"><img src="https://images.pexels.com/photos/609687/pexels-photo-609687.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
 												<div class="post__body">
 													<div class="post__meta"><span class="date">Nov 26, 2017</span><span class="author"><a href="#">by Bryan Ryan</a></span></div>
-													<h2 class="post__title"><a href="blog-detail.html">Free Sketch Plugins</a></h2>
+													<h2 class="post__title"><a href="blogDetail">Free Sketch Plugins</a></h2>
 													<p class="post__text">Nam suscipit nisi risus, et porttitor metus molestie a. Phasellus id quam id turpis suscipit pretium. Maecenas ultrices, lacus ut </p>
 													<a class="md-btn md-btn--outline-primary" href="#">read more
 													</a>
@@ -80,10 +80,10 @@
 
 											<!-- post -->
 											<div class="post">
-												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/754949/pexels-photo-754949.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
+												<div class="post__media"><a href="blogDetail"><img src="https://images.pexels.com/photos/754949/pexels-photo-754949.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
 												<div class="post__body">
 													<div class="post__meta"><span class="date">Dec 20, 2017</span><span class="author"><a href="#">by Bruce Powell</a></span></div>
-													<h2 class="post__title"><a href="blog-detail.html">3 Essential Design Trends</a></h2>
+													<h2 class="post__title"><a href="blogDetail">3 Essential Design Trends</a></h2>
 													<p class="post__text">Maecenas lorem ex, euismod eget pulvinar non, facilisis ut leo. Quisque placerat purus in neque efficitur ornare. Nam at justo mag</p>
 													<a class="md-btn md-btn--outline-primary" href="#">read more
 													</a>
@@ -99,10 +99,10 @@
 
 											<!-- post -->
 											<div class="post">
-												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/794578/pexels-photo-794578.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
+												<div class="post__media"><a href="blogDetail"><img src="https://images.pexels.com/photos/794578/pexels-photo-794578.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
 												<div class="post__body">
 													<div class="post__meta"><span class="date">Dec 20, 2017</span><span class="author"><a href="#">by Sean Coleman</a></span></div>
-													<h2 class="post__title"><a href="blog-detail.html">How to Create and Manage SVG Sprites</a></h2>
+													<h2 class="post__title"><a href="blogDetail">How to Create and Manage SVG Sprites</a></h2>
 													<p class="post__text">Integer placerat ullamcorper urna nec rhoncus. Sed velit justo, lacinia non sapien imperdiet, sagittis fringilla risus. Nulla in e</p>
 													<a class="md-btn md-btn--outline-primary" href="#">read more
 													</a>
@@ -118,10 +118,10 @@
 
 											<!-- post -->
 											<div class="post">
-												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/38069/pexels-photo-38069.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
+												<div class="post__media"><a href="blogDetail"><img src="https://images.pexels.com/photos/38069/pexels-photo-38069.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
 												<div class="post__body">
 													<div class="post__meta"><span class="date">Feb 15, 2018</span><span class="author"><a href="#">by Daniel Ramirez</a></span></div>
-													<h2 class="post__title"><a href="blog-detail.html">3 Essential Design Trends</a></h2>
+													<h2 class="post__title"><a href="blogDetail">3 Essential Design Trends</a></h2>
 													<p class="post__text">Maecenas lorem ex, euismod eget pulvinar non, facilisis ut leo. Quisque placerat purus in neque efficitur ornare. Nam at justo mag</p>
 													<a class="md-btn md-btn--outline-primary" href="#">read more
 													</a>
@@ -137,10 +137,10 @@
 
 											<!-- post -->
 											<div class="post">
-												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/290386/pexels-photo-290386.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
+												<div class="post__media"><a href="blogDetail"><img src="https://images.pexels.com/photos/290386/pexels-photo-290386.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
 												<div class="post__body">
 													<div class="post__meta"><span class="date">Nov 26, 2017</span><span class="author"><a href="#">by Olivia Ryan</a></span></div>
-													<h2 class="post__title"><a href="blog-detail.html">3 Essential Design Trends</a></h2>
+													<h2 class="post__title"><a href="blogDetail">3 Essential Design Trends</a></h2>
 													<p class="post__text">Sed ante nisl, fermentum et facilisis in, maximus sed ipsum. Cras hendrerit feugiat eros, ut fringilla nunc finibus sed. Quisque v</p>
 													<a class="md-btn md-btn--outline-primary" href="#">read more
 													</a>
@@ -156,10 +156,10 @@
 
 											<!-- post -->
 											<div class="post">
-												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/792906/pexels-photo-792906.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
+												<div class="post__media"><a href="blogDetail"><img src="https://images.pexels.com/photos/792906/pexels-photo-792906.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
 												<div class="post__body">
 													<div class="post__meta"><span class="date">Jan 28, 2018</span><span class="author"><a href="#">by Ann Fowler</a></span></div>
-													<h2 class="post__title"><a href="blog-detail.html">Getting Started with Vue.Js</a></h2>
+													<h2 class="post__title"><a href="blogDetail">Getting Started with Vue.Js</a></h2>
 													<p class="post__text">Suspendisse ac elit vitae est lacinia interdum eu sit amet mauris. Phasellus aliquam nisi sit amet libero mattis ornare. In varius</p>
 													<a class="md-btn md-btn--outline-primary" href="#">read more
 													</a>
@@ -175,10 +175,10 @@
 
 											<!-- post -->
 											<div class="post">
-												<div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/789140/pexels-photo-789140.jpeg?h=350&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
+												<div class="post__media"><a href="blogDetail"><img src="https://images.pexels.com/photos/789140/pexels-photo-789140.jpeg?h=350&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
 												<div class="post__body">
 													<div class="post__meta"><span class="date">Dec 20, 2017</span><span class="author"><a href="#">by Olivia Ryan</a></span></div>
-													<h2 class="post__title"><a href="blog-detail.html">Design a Perfect Homepage</a></h2>
+													<h2 class="post__title"><a href="blogDetail">Design a Perfect Homepage</a></h2>
 													<p class="post__text">Maecenas lorem ex, euismod eget pulvinar non, facilisis ut leo. Quisque placerat purus in neque efficitur ornare. Nam at justo mag</p>
 													<a class="md-btn md-btn--outline-primary" href="#">read more
 													</a>
