--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-slide-bottom -->
 													<div class="hoverbox ef-slide-bottom light">
@@ -86,7 +86,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-move-top -->
 													<div class="hoverbox ef-move-top light">
@@ -113,7 +113,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-slide-right -->
 													<div class="hoverbox ef-slide-right light">
@@ -140,7 +140,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-zoom-in -->
 													<div class="hoverbox ef-zoom-in light">
@@ -167,7 +167,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-zoom-in -->
 													<div class="hoverbox ef-zoom-in light">
@@ -194,7 +194,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-slide-right -->
 													<div class="hoverbox ef-slide-right light">
@@ -221,7 +221,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-move-right -->
 													<div class="hoverbox ef-move-right light">
@@ -248,7 +248,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-move-bottom -->
 													<div class="hoverbox ef-move-bottom light">
@@ -275,7 +275,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-move-bottom -->
 													<div class="hoverbox ef-move-bottom light">
