--- a/views/work.ejs
+++ b/views/work.ejs
@@ -42,7 +42,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-slide-top -->
 													<div class="hoverbox ef-slide-top light">
@@ -69,7 +69,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-move-top -->
 													<div class="hoverbox ef-move-top light">
@@ -96,7 +96,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-push-bottom -->
 													<div class="hoverbox ef-push-bottom light">
@@ -123,7 +123,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-slide-left -->
 													<div class="hoverbox ef-slide-left light">
@@ -150,7 +150,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-zoom-in -->
 													<div class="hoverbox ef-zoom-in light">
@@ -177,7 +177,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-slide-top -->
 													<div class="hoverbox ef-slide-top light">
@@ -204,7 +204,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-push-top -->
 													<div class="hoverbox ef-push-top light">
@@ -231,7 +231,7 @@
 										<div class="grid-item__content-wrapper">
 
 											<!-- work -->
-											<div class="work"><a href="work-detail.html">
+											<div class="work"><a href="blogDetail">
 
 													<!-- hoverbox ef-push-bottom -->
 													<div class="hoverbox ef-push-bottom light">
