change btn animation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -300,7 +300,7 @@
 							</div>
 						</div>
 						<div class="awe-text-center mt-50">
-							<a class="md-btn md-btn--outline-primary" href="#">all work
+							<a class="md-btn md-btn--outline-primary" href="work">all work
 							</a>
 						</div>
 					</div>
