--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -27,7 +27,7 @@
         <p>"Minimus template" is licensed under
         <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> by Lijing Wang, is a derivative of
             <a href="https://themewagon.com/themes/free-responsive-personal-portfolio-template-download/"> Minimus - Free HTML5 Responsive Personal Portfolio Template"</a> by
-            <a href="http://awe7.com/">Awe7</a> (2018 &copy; Copyright, all rights reserved)</p>
+            <a href="http://awe7.com/">Awe7</a>. 2018 &copy; Copyright, all rights reserved.</p>
       </div>
 
     </div>
