update contact, add mailto, taglines, emoji

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,17 @@
 
 						<!-- page-title -->
 						<div class="page-title">
-							<h2 class="page-title__title">Hello, my name is Lijing Wang.<br>I
+							<h2 class="page-title__title">Hello, my name is Lijing Wang.<br>I'm
 
 								<!-- typing__module -->
 								<div class="typing__module">
-									<div class="typed-strings"><span>'m a full-stack web developer</span><span> create solutions</span><span>keep current</span>
+									<div class="typed-strings">
+										<span>a full-stack web developer.</span>
+										<span>greedy and hope to learn deeper and broader.</span>
+										<span> a passionate solution provider.</span>
+										<span>a calm prioritizer.</span>
+										<span>a friendly team contributor.</span>
+
 									</div><span class="typed"></span>
 								</div><!-- End / typing__module -->
 
