update about, tagline, bio

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -21,7 +21,8 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">About me</h2>
-							<p class="page-title__text">Curabitur elementum urna augue, eu porta</p>
+							<p class="page-title__text">A passionate solution provider, a calm prioritizer, a friendly team contributor. I'm greedy
+							and hope to learn deeper and broader.</p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 
@@ -40,15 +41,25 @@
 
 								<!--  -->
 								<div class="mt-30">
-									<h2 class="about__title">Erik Minimis</h2>
-									<p class="about__subtitle">Just Keep Scrolling! How To Design Lengthy, Lengthy Pages</p>
-									<p class="about__text">Maecenas lorem ex, euismod eget pulvinar non, facilisis ut leo. Quisque placerat purus in neque efficitur ornare. Nam at justo magna. Aliquam venenatis odio ante, non euismod augue porttitor eget. Maecenas nec viverra eros, eget euismod felis. Integer cursus libero sed lorem euismod, vel iaculis felis placerat. Pellentesque augue lacus, sodales et eros sed, molestie rhoncus ligula. Vivamus sed massa lorem. Suspendisse mollis lectus nec ex fermentum, in consectetur dolor egestas. Phasellus quis ipsum quis nisl ultricies sollicitudin id in dolor. Proin at consequat dui.</p>
+									<h2 class="about__title">Lijing Wang</h2>
+									<p class="about__subtitle">On my way to a techie</p>
+									<p class="about__text">I enjoy how powerful I'm with the programming skills. I'm dreaming about what I will achieve at the age of 50.</p>
+
+									<p class="about__subtitle">World citezen</p>
+									<p class="about__text">Made in China. Value-add manufatured in Canada. Embedded passion on languages/translations ➕ cultural facts & perspectives.</p>
+
+									<p class="about__subtitle">A three dimonsional being</p>
+									<p class="about__text">Love rocks, soils, plants, animals! Emm... I don't have a green thumb tho.</p>
+
+									<p class="about__subtitle">Sports???</p>
+									<p class="about__text">Maybe eye exercises like reading? I do like yoga, canoeing, xbox sports, and badminton!</p>
+
 
 									<!-- progress -->
 									<div class="progress">
-										<h5 class="progress__title">design</h5>
+										<h5 class="progress__title">green thumb</h5>
 										<div class="progress__wrap">
-											<div class="progress__bar" data-progress-percent="33" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">39%</span>
+											<div class="progress__bar" data-progress-percent="3" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">39%</span>
 										</div>
 									</div><!-- End / progress -->
 
@@ -57,7 +68,7 @@
 									<div class="progress">
 										<h5 class="progress__title">photography</h5>
 										<div class="progress__wrap">
-											<div class="progress__bar" data-progress-percent="59" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">47%</span>
+											<div class="progress__bar" data-progress-percent="40" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">47%</span>
 										</div>
 									</div><!-- End / progress -->
 
@@ -66,7 +77,7 @@
 									<div class="progress">
 										<h5 class="progress__title">web development</h5>
 										<div class="progress__wrap">
-											<div class="progress__bar" data-progress-percent="53" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">59%</span>
+											<div class="progress__bar" data-progress-percent="75" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">59%</span>
 										</div>
 									</div><!-- End / progress -->
 
