remove work, use blog as projects display

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -20,8 +20,8 @@
 
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title">I write</h2>
-							<p class="page-title__text">Sed ante nisl, fermentum et facilisis in</p>
+							<h2 class="page-title__title">I created and built up</h2>
+							<p class="page-title__text">solutions!</p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 
