--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
 
 								<!-- title -->
 								<div class="title">
-									<h2 class="title__title">My work</h2>
+									<h2 class="title__title">My projects</h2>
 								</div><!-- End / title -->
 
 							</div>
@@ -306,7 +306,7 @@
 							</div>
 						</div>
 						<div class="awe-text-center mt-50">
-							<a class="md-btn md-btn--outline-primary" href="work">all work
+							<a class="md-btn md-btn--outline-primary" href="work">all projects
 							</a>
 						</div>
 					</div>
