--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,11 +28,11 @@
         <li>
           <a href="about">About</a>
         </li>
-        <li>
+        <!-- <li>
           <a href="work">Work</a>
-        </li>
+        </li> -->
         <li>
-          <a href="blog">Blog</a>
+          <a href="blog">Projects</a>
         </li>
         <li>
           <a href="contact">Contact</a>
