implemented google analytics

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<% include partials/analytics %>
 		<title>About</title>
 		<% include partials/title %>
 	</head>
