--- a/views/blogDetail.ejs
+++ b/views/blogDetail.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<% include partials/analytics %>
+
 		<title>Post detail</title>
 		<% include partials/title %>
 
