--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<% include partials/analytics %>
+
 		<title>Home</title>
 		<% include partials/title %>
 	</head>
